--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,7 @@ body {
     font-family: 'Ubuntu', sans-serif;
     background-color: #f9f7f4;
     color: #474747;
-    margin-left: 2rem;
-    margin-right: 2rem;
+
 }
 
 /* HEADER */
@@ -39,101 +38,36 @@ a{
     margin-top: 4rem;
 }
 
-h5 {
-    font-weight: 600;
-}
-
 h1{
     font-family: Lora;
-}
-
-#mission {
-    margin-bottom: 4rem;
 }
 
 .end {
     margin-bottom: 4rem;
 }
 
-.btnContainer {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 8rem;
-}
-
-.btn-primary {
-    background-color: #474747;
-    color: #f9f7f4;
-    border-color: #474747;
-    border-radius: 0;
-}
-
-.btn:hover {
-    background-color: #474747;
-    border-color: #474747;
-    color: #f9f7f4;
-}
-
-.customBtn:not(:disabled):not(disabled):active {
-    background-color: #474747;
-    border-color: #474747;
-    color: #f9f7f4;
-}
-
 .container {
     display: flex;
-}
-
-.accordion {
- width: 100%;
-}
-
-.accordion, .accordion-button, .accorion-item {
-    background-color: #f9f7f4;
-    color: #474747;
-}
-
-.accordion-button:not(.collapsed) {
-    background-color: #EAE3D9;
-    color: #474747;
-    border-color: #474747;
-}
-
-.accordion-button:focus{
-    box-shadow: none;
 }
 
 .sectionTitle {
     padding-bottom: 4rem;
 }
 
-.projectLink {
-    text-decoration: underline;
+.card {
+    border: transparent
+}
+
+span {
     color: #474747;
 }
 
-.projectLink:hover {
-    font-weight: 700;
-}
-
-.projectTitle h3 {
-    margin-bottom: 2rem;
-}
-
-.projectTitle h4 {
-    margin-bottom: 4rem;
+span:hover {
+    text-decoration: underline;
 }
 
 .project {
     margin-bottom: 8rem;
-}
-
-.projectImage {
-    width: 100%;
-}
-
-.subtitle {
-    padding-right: 1rem;
 }
 
 /* ABOUT */
@@ -160,27 +94,7 @@ h1{
     font-weight: 700;
 }
 
-/* WORK */
-.contact {
-    display: block;
-}
-
-.workProduct {
-    margin-bottom: 2rem;
-}
-
-#backtoWork {
-    text-decoration: none;
-    color: #474747;
-}
-
-#backtoWork:hover {
-    font-weight: 700;
-}
-
-.sectionBreak {
-    visibility: hidden;
-}
+/* PROJECTS */
 
 iframe {
     width: 100%;
@@ -189,12 +103,13 @@ iframe {
 
 /* FOOTER */
 
-footer {
-    padding: 1rem 2rem;
-}
 
 #footerInitials {
     font-family: Lora;
+}
+
+h5 {
+    font-weight: 600;
 }
 
 /* MEDIA QUERIES */
