--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,14 @@ iframe {
     margin-top: 4rem;
 }
 
+h4 {
+    margin-top: 2rem;
+}
+
+.subSection {
+    margin-bottom: 2rem
+}
+
 /* FOOTER */
 
 
